# HFT

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  main.py
Client/market_data/: market_data_consumer.cpp  market_data_consumer.h
Client/order_gateway/: order_gateway.cpp  order_gateway.h
Client/strategy/: feature_engine.h  liquidity_taker.h  market_maker.h  market_order.h  market_order_book.cpp  market_order_book.h  om_order.h  order_manager.cpp  order_manager.h  position_keeper.h  risk_manager.h  trading_engine.cpp  trading_engine.h
Common/: lf_queue.h  logging.cpp  logging.h  mcast_socket.cpp  mcast_socket.h  socket_utils.h  tcp_server.h  tcp_socket.cpp  types.h
Common/examples/: thread_examples.cpp
Common/include/: socket_utils.h  tcp_server.h  tcp_socket.h  types.h
Common/src/: tcp_server.cpp
Exchange/: exchange_main.cpp
Exchange/market_data/: market_data_publisher.cpp  market_data_publisher.h  market_update.h  snapshot_synthesizer.cpp  snapshot_synthesizer.h
Exchange/matcher/: matching_engine.cpp  matching_engine.h  me_order.h  me_order_book.cpp  me_order_book.h
Exchange/order_server/: client_request.h  client_response.h  fifo_sequencer.h  order_server.cpp  order_server.h
examples/: lf_queue_example.cpp  logging_example.cpp  mem_pool_example.cpp  socket_examples.cpp
include/: logging.h  macros.h  mem_pool.h  thread_utils.h  time_utils.h
